--- a/client-app/src/app/layout/style.css
+++ b/client-app/src/app/layout/style.css
@@ -2,5 +2,5 @@ body {
     background-color: #EAEAEA !important;
 }
 .ui.inverted.top.fixed.menu {
-    background-image: linear-gradient(135deg, rgb(24,42,115) 0%, rgb(33,138,174) 69%, rgb(32,167,172) 89%) !important;
+    background-image: linear-gradient(135deg, #ED4C5E 0%, #FECDA5 69%, rgb(32,167,172) 89%) !important;
 }
